# AdventOfCode2025

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlint.yaml  .timetracker  Backlog.md  CHANGELOG.md  README.md  aaa  backlog.sh  build-viewer  bumpversion.sh  deploy.sh  easter-eggs  easter.eggs.md  finish.sh  get-easter-eggs  get-puzzles  pyproject.toml  requirements.txt  ruff.sh  run  run.sh  start
.git-crypt/keys/default/0/: 24EA7CE46D2249AEE25F44E1E48B17136B7A42DE.gpg
.github/workflows/: aoc-badges.yml  release-please.yml
backlog/: Backlog.Final.md  config.yml
backlog/tasks/: task-1 - day-01.md  task-10 - day-10.md  task-11 - day-11.md  task-12 - day-12.md  task-2 - day-02.md  task-3 - day-03.md  task-4 - day-04.md  task-5 - day-05.md  task-6 - day-06.md  task-7 - day-07.md  task-8 - day-08.md  task-9 - day-09.md
misc/: tests.py.tmpl
puzzles/: input.txt
solutions/base/: advent.py
src/advent-of-code-2025/: ans1.txt  ans2.txt
src/advent-of-code-2025/misc/: example_solution.py.tmpl  tests.py.tmpl  viewer.tmpl
src/advent-of-code-2025/puzzles/: day1.txt  day10.txt  day11.txt  day12.txt  day2.txt  day222.txt  day3.txt  day4.txt  day5.txt  day6.txt  day7.txt  day8.txt  day9.txt
src/advent-of-code-2025/viewer/: index.html
viewer/: Backlog.md  base.html  day01.html  day02.html  day03.html  day04.html  day05.html  day06.html  day07.html  day08.html  day09.html  day10.html  day11.html  day12.html  index.html  script.js  task-10 - day-10.md  task-11 - day-11.md  task-12 - day-12.md  task-2 - day-02.md  task-7 - day-07.md
(+74 files in other folders)
