[project]
name = "advent-of-code-2025"
authors = [
    {name = "Sergio Rodrigues Giraldo", email = "sergiorgiraldo@gmail.com"},
]
maintainers = [
    {name = "Sergio Rodrigues Giraldo", email = "sergiorgiraldo@gmail.com"},
]
dependencies = [
    "ruff",
    "advent-of-code-data",
    "selenium",
    "python-dotenv",
    "networkx",
    "z3-solver",
    "requests"
]
version = "3.0.0"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.ruff.lint]
select = [
  'E',    # PEP8 recommendations
  'F',    # bugs
  'I001', # import sorting
  'BLE',  # catching root Exception
  'A',    # built-in shadowing
  'C4',   # unnecessary comprehensions
  'ISC',  # implicit string concat
  'PIE',  # misc useful lints
  'Q',    # better quoting behavior
  'RSE',  # no parens on exceptions that lack args
  'RET',  # more correct return behavior
  'SIM',  # general style things
  'TCH',  # type-only imports should be in a typecheck block
  'ARG',  # unused args
  'PTH',  # use pathlib
  'FLY',  # short ''.join calls
  'PERF', # performance hints
]

ignore = [
  'E501', # skip enforcing line length
  'E741', # ignore short variable names
]